# LQR_cart_pendulum

./: CMakeCache.txt  CMakeLists.txt  CartPendulumSimulator  LQR.py  Makefile  README.md  cart.cpp  cart.hpp  cart_pendulum.cpp  cart_pendulum.hpp  cmake_install.cmake  controller.cpp  controller.hpp  equilibrium_checker.py  main.cpp  rk4_integrator.cpp  rk4_integrator.hpp
